fixed the bug with sidebar covering the tabs

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,6 +19,7 @@ body {
   line-height: 1;
   display: block;
   position: relative;
+  z-index: 1;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -99,6 +100,7 @@ body {
 #cssmenu > ul > li.has-sub > div,
 #cssmenu > ul > li.has-sub > a {
   padding-right: 25px;
+  z-index: 1;
 }
 #cssmenu > ul > li.has-sub > div::after, 
 #cssmenu > ul > li.has-sub > a::after {
